	numeric columns failed.  (PR#3532)

    o   Registered group generics were not being used. (PR#3536)

    o   Subsetting data frames did not always correctly detect that
	non-existent columns were specified.

    o   legend() allows shading without filling again.

    o   There are many more checks for over-running internal buffers,
	almost always reporting errors.




	**************************************************
	*						 *
	*	       1.7 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.7.2


NEW FEATURES

    o	R CMD check accepts "ORPHANED" as package maintainer. Package
	maintainers can now officially orphanize a package, i.e.,
	resign from maintaining a package.

    o	format.info() now also works with `nsmall' in analogy with
	format.default()


BUG FIXES

    o	cut.POSIXt() now passes on ... to cut.default(), as documented.

    o	seq.POSIXt(from, to, by="DSTday") was failing or calculating
	the length incorrectly.

    o	On some machines the internal rounding used in postscript() was
	imperfect, causing unnecessarily verbose output (-0.00 instead of
	0) and problems with make check.

    o	pacf() was failing if called on a one-column matrix.

    o	$<- did not duplicate when it needed to.

    o	methods("$") and methods("$<-") were failing to find methods.

    o	Recursive indexing of lists had too little error-checking.
	(related to PR#3324)

    o	get() and exists() were ignoring the `mode' argument for
	variables in base.  The error message for get() now mentions
	the mode requested if not "any".  A bug in setting the NAMED
	field in do_get was fixed.

    o	Removed warning about names in persistent strings when a
	namespace is saved.

    o	The apparently never used `method' argument to loess() did not
	work.  (PR#3332)

    o	Fixed some malformed error messages in methods package.

    o	plot.POSIX[cl]t no longer passes col, lty, lwd to axis.POSIXt.
